@@ -1,153 +1,0 @@
-.cvsignore
-.gitignore
-.releaserc
-Build.PL
-Changes
-inc/My/Judy/Builder.pm
-lib/Alien/Judy.pm
-lib/Alien/Judy.pod
-MANIFEST
-MANIFEST.SKIP
-META.yml
-README
-src/judy-1.0.5/aclocal.m4
-src/judy-1.0.5/AUTHORS
-src/judy-1.0.5/autom4te.cache/output.0
-src/judy-1.0.5/autom4te.cache/output.1
-src/judy-1.0.5/autom4te.cache/requests
-src/judy-1.0.5/autom4te.cache/traces.0
-src/judy-1.0.5/autom4te.cache/traces.1
-src/judy-1.0.5/bootstrap
-src/judy-1.0.5/ChangeLog
-src/judy-1.0.5/compile
-src/judy-1.0.5/config.guess
-src/judy-1.0.5/config.h.in
-src/judy-1.0.5/config.sub
-src/judy-1.0.5/configure
-src/judy-1.0.5/configure.ac
-src/judy-1.0.5/COPYING
-src/judy-1.0.5/depcomp
-src/judy-1.0.5/doc/ext/COPYRIGHT
-src/judy-1.0.5/doc/ext/Judy1_3.htm
-src/judy-1.0.5/doc/ext/Judy1_funcs_3.htm
-src/judy-1.0.5/doc/ext/Judy_3.htm
-src/judy-1.0.5/doc/ext/JudyHS_3.htm
-src/judy-1.0.5/doc/ext/JudyHS_funcs_3.htm
-src/judy-1.0.5/doc/ext/JudyL_3.htm
-src/judy-1.0.5/doc/ext/JudyL_funcs_3.htm
-src/judy-1.0.5/doc/ext/JudySL_3.htm
-src/judy-1.0.5/doc/ext/JudySL_funcs_3.htm
-src/judy-1.0.5/doc/ext/LICENSE
-src/judy-1.0.5/doc/ext/README
-src/judy-1.0.5/doc/ext/README_deliver
-src/judy-1.0.5/doc/int/10minutes.htm
-src/judy-1.0.5/doc/Makefile.am
-src/judy-1.0.5/doc/Makefile.in
-src/judy-1.0.5/doc/man/man3/.keep
-src/judy-1.0.5/examples/Judy1Dup.c
-src/judy-1.0.5/examples/Judy1Dup.h
-src/judy-1.0.5/examples/Judy1DupCheck.c
-src/judy-1.0.5/examples/Judy1Op.c
-src/judy-1.0.5/examples/Judy1Op.h
-src/judy-1.0.5/examples/Judy1OpCheck.c
-src/judy-1.0.5/examples/Makefile
-src/judy-1.0.5/examples/README
-src/judy-1.0.5/INSTALL
-src/judy-1.0.5/install-sh
-src/judy-1.0.5/ltmain.sh
-src/judy-1.0.5/Makefile.am
-src/judy-1.0.5/Makefile.in
-src/judy-1.0.5/missing
-src/judy-1.0.5/README
-src/judy-1.0.5/src/apps/demo/funhist.c
-src/judy-1.0.5/src/apps/demo/interL.c
-src/judy-1.0.5/src/apps/demo/interSL.c
-src/judy-1.0.5/src/apps/demo/JudySort.c
-src/judy-1.0.5/src/apps/demo/Makefile_deliver
-src/judy-1.0.5/src/apps/demo/README
-src/judy-1.0.5/src/apps/demo/README_deliver
-src/judy-1.0.5/src/apps/demo/run_demo
-src/judy-1.0.5/src/apps/README
-src/judy-1.0.5/src/build.bat
-src/judy-1.0.5/src/Judy.h
-src/judy-1.0.5/src/Judy.h.check.c
-src/judy-1.0.5/src/Judy1/Judy1.h
-src/judy-1.0.5/src/Judy1/Makefile.am
-src/judy-1.0.5/src/Judy1/Makefile.in
-src/judy-1.0.5/src/Judy1/README
-src/judy-1.0.5/src/JudyCommon/JudyByCount.c
-src/judy-1.0.5/src/JudyCommon/JudyCascade.c
-src/judy-1.0.5/src/JudyCommon/JudyCount.c
-src/judy-1.0.5/src/JudyCommon/JudyCreateBranch.c
-src/judy-1.0.5/src/JudyCommon/JudyDecascade.c
-src/judy-1.0.5/src/JudyCommon/JudyDel.c
-src/judy-1.0.5/src/JudyCommon/JudyFirst.c
-src/judy-1.0.5/src/JudyCommon/JudyFreeArray.c
-src/judy-1.0.5/src/JudyCommon/JudyGet.c
-src/judy-1.0.5/src/JudyCommon/JudyIns.c
-src/judy-1.0.5/src/JudyCommon/JudyInsArray.c
-src/judy-1.0.5/src/JudyCommon/JudyInsertBranch.c
-src/judy-1.0.5/src/JudyCommon/JudyMalloc.c
-src/judy-1.0.5/src/JudyCommon/JudyMallocIF.c
-src/judy-1.0.5/src/JudyCommon/JudyMemActive.c
-src/judy-1.0.5/src/JudyCommon/JudyMemUsed.c
-src/judy-1.0.5/src/JudyCommon/JudyPrevNext.c
-src/judy-1.0.5/src/JudyCommon/JudyPrevNextEmpty.c
-src/judy-1.0.5/src/JudyCommon/JudyPrintJP.c
-src/judy-1.0.5/src/JudyCommon/JudyPrivate.h
-src/judy-1.0.5/src/JudyCommon/JudyPrivate1L.h
-src/judy-1.0.5/src/JudyCommon/JudyPrivateBranch.h
-src/judy-1.0.5/src/JudyCommon/JudyTables.c
-src/judy-1.0.5/src/JudyCommon/Makefile.am
-src/judy-1.0.5/src/JudyCommon/Makefile.in
-src/judy-1.0.5/src/JudyCommon/README
-src/judy-1.0.5/src/JudyHS/JudyHS.c
-src/judy-1.0.5/src/JudyHS/JudyHS.h
-src/judy-1.0.5/src/JudyHS/Makefile.am
-src/judy-1.0.5/src/JudyHS/Makefile.in
-src/judy-1.0.5/src/JudyHS/README
-src/judy-1.0.5/src/JudyL/JudyL.h
-src/judy-1.0.5/src/JudyL/Makefile.am
-src/judy-1.0.5/src/JudyL/Makefile.in
-src/judy-1.0.5/src/JudyL/README
-src/judy-1.0.5/src/JudySL/JudySL.c
-src/judy-1.0.5/src/JudySL/Makefile.am
-src/judy-1.0.5/src/JudySL/Makefile.in
-src/judy-1.0.5/src/JudySL/README
-src/judy-1.0.5/src/Makefile.am
-src/judy-1.0.5/src/Makefile.in
-src/judy-1.0.5/src/obj/Makefile.am
-src/judy-1.0.5/src/obj/Makefile.in
-src/judy-1.0.5/src/README
-src/judy-1.0.5/src/sh_build
-src/judy-1.0.5/test/Centrino_1.3Mhz_Plots/Hash_CO.plot
-src/judy-1.0.5/test/Centrino_1.3Mhz_Plots/JLHash_CO.plot
-src/judy-1.0.5/test/Centrino_1.3Mhz_Plots/JudyHS_CO.plot
-src/judy-1.0.5/test/Centrino_1.3Mhz_Plots/JudySL_CO.plot
-src/judy-1.0.5/test/CheckDupLines.c
-src/judy-1.0.5/test/Checkit
-src/judy-1.0.5/test/jbgraph
-src/judy-1.0.5/test/Judy1LCheck.c
-src/judy-1.0.5/test/Judy1LHCheck.c
-src/judy-1.0.5/test/Judy1LHTime.c
-src/judy-1.0.5/test/Judy1LTime.c
-src/judy-1.0.5/test/JudyString.c
-src/judy-1.0.5/test/Makefile.am
-src/judy-1.0.5/test/Makefile.in
-src/judy-1.0.5/test/malloc-pre2.8a.c
-src/judy-1.0.5/test/README
-src/judy-1.0.5/test/simple.c
-src/judy-1.0.5/test/SLcompare.c
-src/judy-1.0.5/test/StringCompare.c
-src/judy-1.0.5/test/testjbgraph
-src/judy-1.0.5/test/timeit.c
-src/judy-1.0.5/test/timeit.h
-src/judy-1.0.5/tool/jhton.c
-src/judy-1.0.5/tool/listJPtype.c
-src/judy-1.0.5/tool/Makefile.am
-src/judy-1.0.5/tool/Makefile.in
-src/judy-1.0.5/tool/README
-t/00-load.t
-xt/99_critic.t
-xt/99_pod.t
-xt/99_pod_coverage.t
