@@ -1,16 +1,0 @@
-^#
-#$
-^Alien-Judy-
-^\.git/
-~$
-^Build$
-^_build
-^blib
-^Changes\.bak$
-^Debian_CPANTS\.txt$
-^Makefile$
-^Makefile.old$
-^MANIFEST\.bak$
-^README\.pod$
-^pm_to_blib$
-^MYMETA.yml$
