@@ -1,0 +1,19 @@
+name = Alien-Judy
+version = 0.24
+main_module = lib/Alien/Judy.pm
+license = Perl_5
+author = Josh Jore <jjore@cpan.org>
+copyright_holder = Josh Jore
+
+[@Filter]
+-bundle = @Classic
+-remove = PodVersion
+-remove = PkgVersion
+
+[@Git]
+[AutoPrereqs]
+
+[Prereqs / DevelopSuggests]
+Test::Pod = 1.41
+Test::Pod::Coverage = 0
+Pod::Coverage::TrustPod = 0
