@@ -2,6 +2,7 @@
 # natively have libJudy on their system can still get one. It provides
 # libJudy.so and Judy.h at the path $Config{sitearch}/Alien/Judy.
 package Alien::Judy;
+# ABSTRACT: A wrapper for installing the Judy library
 
 use strict;
 use warnings;
