@@ -4,6 +4,7 @@ Revision history for Alien-Judy
         Ignore $Config{make} and $Config{gmake} because they're not actually
           useful. Look for GNU make more directly.
         Fix documentation for inc_dirs and lib_dirs.
+        Build with Dist::Zilla
 
 0.24    Fri Jan 14, 2011
         Remove DynaLoader check for Judy1Test. Needed? It was
